# regimeshift-thresholds

./: .gitignore  CITATION.cff  README  README.md  pyproject.toml  requirements.txt
examples/: data.csv  run_thresholds.py
src/rsthresh/: __init__.py  detector.py  logging_utils.py  plotting.py
tests/: test_detector.py
